cmake_minimum_required(VERSION 3.8)

#set the project name
project(listtest)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

include_directories(../../include)

#add the executable
add_executable(listtest listtest.cpp)

add_executable(selflist selflisttest.cpp)

add_executable(lazydelete lazy.cpp)